--- a/index.html
+++ b/index.html
@@ -1,55 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>NAKODA BHAIRAV | Batches</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
-        font-family: Arial, sans-serif;
-      }
-      header {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        background: #fff;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px 20px;
-        z-index: 1000;
-        border-bottom: 1px solid #ccc;
-      }
-      .title {
-        font-size: 20px;
-        font-weight: bold;
-        color: #111;
-      }
-      .join-btn {
-        padding: 8px 16px;
-        background: #111;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 8px;
-        font-weight: bold;
-      }
-      iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-        margin-top: 60px;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <div class="title">NAKODA BHAIRAV</div>
-      <a class="join-btn" href="https://t.me/MockManager" target="_blank">Join Now</a>
-    </header>
-    <iframe src="https://studyuk.fun/goal/" loading="lazy"></iframe>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=https://studyuk.fun/goal/" />
+  <title>Redirecting to Explore Page...</title>
+</head>
+<body>
+  <p>Redirecting you to the Explore page...</p>
+  <p>If nothing happens, <a href="https://studyuk.fun/goal/">click here</a>.</p>
+</body>
 </html>
