--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://studyuk.fun/goal/" />
-  <title>Redirecting to Explore Page...</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proxy Clone</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-  <p>Redirecting you to the Explore page...</p>
-  <p>If nothing happens, <a href="https://studyuk.fun/goal/">click here</a>.</p>
+    <h1>Welcome to the Proxy Clone</h1>
+    <iframe src="/api/proxy" title="Proxy Content"></iframe>
 </body>
 </html>
