--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proxy Clone</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+    <title>StudyUK Clone</title>
+    <script>
+        window.location.replace("YOUR_CLOUDFLARE_WORKER_URL");
+    </script>
 </head>
 <body>
-    <h1>Welcome to the Proxy Clone</h1>
-    <iframe src="/api/proxy" title="Proxy Content"></iframe>
+    <p>Redirecting to StudyUK Clone...</p>
 </body>
 </html>
