--- a/public /index.html
+++ b/public /index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NAKODA BHAIRAV Goal Clone</title>
-    <style>
-      html, body, iframe {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-    </style>
+    <title>Redirecting to Goal Proxy</title>
+    <meta http-equiv="refresh" content="0; url=/api/goal" />
+    <script>
+      location.href = "/api/goal";
+    </script>
   </head>
   <body>
-    <iframe src="/api/goal" allowfullscreen></iframe>
+    <p>Redirecting to NAKODA BHAIRAV goal page...</p>
   </body>
 </html>
