--- a/public /index.html
+++ b/public /index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='/api/goal'" />
-    <script>
-      location.href = "/api/goal";
-    </script>
+    <meta http-equiv="refresh" content="0; url=/api/goal">
+    <title>Redirecting...</title>
   </head>
   <body>
-    <p>Redirecting...</p>
+    <p>Redirecting to NAKODA BHAIRAV goal page...</p>
   </body>
 </html>
