--- a/public /index.html
+++ b/public /index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/api/goal">
-    <title>Redirecting to goal...</title>
+    <meta http-equiv="refresh" content="0; url=/api/goal" />
+    <title>Redirecting...</title>
   </head>
   <body>
-    <p>Redirecting to NAKODA BHAIRAV goal page...</p>
+    <p>Redirecting to NAKODA BHAIRAV clone...</p>
   </body>
 </html>
