--- a/public /index.html
+++ b/public /index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=/api/goal" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>Redirecting to NAKODA BHAIRAV clone...</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proxy Clone</title>
+  <script>
+    // Option 1: Redirect to proxy
+    window.location.href = '/api/proxy/goal/';
+    // Option 2: Uncomment for iframe embedding
+    /*
+    document.addEventListener('DOMContentLoaded', () => {
+      document.body.innerHTML = `<iframe src="/api/proxy/goal/" style="width:100%;height:100vh;border:none;"></iframe>`;
+    });
+    */
+  </script>
+</head>
+<body>
+  <!-- Redirect happens automatically, or iframe will be embedded -->
+</body>
 </html>
